kubernetes/auth/dex-external/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex-external
  namespace: auth
spec:
parentRefs:
  - name: external
    namespace: network
  hostnames:
    - "dex.whoverse.nexus"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dex-external
          port: 5556
